# vigem-client

./: Cargo.toml  license.txt  readme.md
examples/: ds4.rs  notification.rs  readme.rs
src/: bus.rs  client.rs  ds4.rs  error.rs  event.rs  lib.rs  syscall.rs  x360.rs
src/ds4/: button.rs  reports.rs
tests/: integration.rs
