[package]
name = "vigem-client"
version = "0.1.4"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

description = "ViGEm client API in pure Rust."
documentation = "https://docs.rs/vigem-client/"
repository = "https://github.com/CasualX/vigem-client"
readme = "readme.md"
categories = ["api-bindings"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[[example]]
name = "notification"
required-features = ["unstable_xtarget_notification"]

[features]
# Include the DS4Target target
unstable_ds4 = []
# Include the XTarget notification API
unstable_xtarget_notification = []

[dependencies]

[dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Input_XboxController",
]

[dev-dependencies]
rusty-xinput = "1.2.0"
urandom = "0.1.0"
