[package]
name = "vigem-client"
version = "0.1.4"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

description = "ViGEm client API in pure Rust."
documentation = "https://docs.rs/vigem-client/"
repository = "https://github.com/CasualX/vigem-client"
readme = "readme.md"
categories = ["api-bindings"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[[example]]
name = "notification"
required-features = ["unstable_xtarget_notification"]

[[example]]
name = "ds4"
required-features = ["unstable_ds4"]

[features]
# Include the DS4Target target
unstable_ds4 = []
# Include the XTarget notification API
unstable_xtarget_notification = []

[dependencies]
winapi = { version = "0.3", features = ["std", "handleapi", "setupapi", "fileapi", "winbase", "ioapiset", "synchapi", "errhandlingapi", "xinput", "winerror"] }

[dev-dependencies]
rusty-xinput = "1.2.0"
urandom = "0.1.0"
